# cutesdr-test2

branches/iw0hdv/cutesdr-se/: CuteSdrSeCat.pro  README
branches/iw0hdv/cutesdr-se/gui/: band.cpp  band.ui  banddlg.cpp  banddlg.h  cat.cpp  cat.h  mainwindow.cpp.bak  mainwindow.ui  plotter.cpp  plotter.h
branches/iw0hdv/cutesdr-se/interface/: sdrinterface.h  soundout.cpp  soundout.h
branches/iw0hdv/linux/trunk/: CMakeLists.txt  CuteSdr.pro  README.linux
branches/iw0hdv/linux/trunk/dsp/: downconvert.cpp
branches/iw0hdv/linux/trunk/siqs/: CMakeLists.txt  README  discover.cpp  discover.h  logger.cpp  logger.h  netsupport.h  siqs_ftdi.cpp
cutesdr-se/: CuteSdrSeCat.pro  README
cutesdr-se/gui/: band.h  banddlg.ui  catdlg.cpp  catdlg.h  catdlg.ui  mainwindow.cpp  mainwindow.h
linux/trunk/: CuteSdr.pro  README.linux
linux/trunk/siqs/: README  cutesdrsrv.sh  discover.cpp  minithread.h  siqs_ftdi.cpp  siqs_serial.cpp
